[gd_scene load_steps=5 format=2]

[ext_resource path="res://interactables/interactBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://interactables/elevatorplacehold.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Menus/buttonCus.tscn" type="PackedScene" id=3]
[ext_resource path="res://interactables/interactExit.gd" type="Script" id=4]

[node name="interactExit" instance=ExtResource( 1 )]
script = ExtResource( 4 )
nextLevel = ""

[node name="Light2D" parent="." index="0"]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )

[node name="playerDetection" parent="." index="1"]
position = Vector2( 0, -17 )
scale = Vector2( 0.75, 0.75 )

[node name="CanvasInteractions" parent="." index="3"]
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasInteractions" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -39.5
margin_right = 173.0
margin_bottom = 34.5

[node name="Continue\?" type="Label" parent="CanvasInteractions/VBoxContainer" index="0"]
margin_right = 344.0
margin_bottom = 27.0
text = "Continue to next level?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasInteractions/VBoxContainer" index="1"]
margin_top = 35.0
margin_right = 344.0
margin_bottom = 74.0
alignment = 1

[node name="yes" parent="CanvasInteractions/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 172.0
margin_bottom = 39.0
text = "Yes"

[node name="no" parent="CanvasInteractions/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_right = 239.0
margin_bottom = 39.0
text = "No"

[node name="CanvasPrompt" parent="." index="4"]
visible = true

[node name="Label" type="Label" parent="CanvasPrompt" index="0"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -27.0
margin_right = 131.0
text = "Elevator"

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]
position = Vector2( 0, -30 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 2 )

[connection signal="pressed" from="CanvasInteractions/VBoxContainer/HBoxContainer/yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="CanvasInteractions/VBoxContainer/HBoxContainer/no" to="." method="_on_No_pressed"]
